#1974 - Fix ice prison suffocation not respecting damage delay, update default damage delay's to Minecraft defaults